[package]
name = "tiny-skia"
version = "0.4.2"
authors = ["Evgeniy Reizner <razrfalcon@gmail.com>"]
edition = "2018"
description = "A tiny Skia subset ported to Rust."
documentation = "https://docs.rs/tiny-skia/"
readme = "README.md"
repository = "https://github.com/RazrFalcon/tiny-skia"
license = "BSD-3-Clause"
keywords = ["2d", "rendering", "skia"]
categories = ["rendering"]

[dependencies]
arrayref = "0.3"
arrayvec = "0.5"
bytemuck = "1.4"
cfg-if = "1"
png = { version = "0.16", optional = true }
safe_arch = { version = "0.5.2", features = ["bytemuck"], optional = true }

[features]
default = ["simd", "png-format"]

# Enables x86 SIMD instructions from SSE up to AVX2.
# Has no effect on non-x86 targets. Present mainly for testing.
simd = ["safe_arch"]

# Allows loading and saving `Pixmap` as PNG.
png-format = ["png"]
