[package]
name = "tiny-skia"
version = "0.7.0"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
edition = "2018"
description = "A tiny Skia subset ported to Rust."
documentation = "https://docs.rs/tiny-skia/"
readme = "README.md"
repository = "https://github.com/RazrFalcon/tiny-skia"
license = "BSD-3-Clause"
keywords = ["2d", "rendering", "skia"]
categories = ["rendering"]

[workspace]
members = ["path"]

[dependencies]
arrayref = "0.3.6"
# do not update to 0.6, because it requires Rust >= 1.51
arrayvec = { version = "0.5", default-features = false }
bytemuck = "1.4"
cfg-if = "1"
png = { version = "0.17", optional = true }
# do not update to 0.6, because it requires Rust >= 1.51
safe_arch = { version = "0.5.2", features = ["bytemuck"], optional = true }
tiny-skia-path = { version = "0.7.0", path = "path", default-features = false }

[features]
default = ["std", "simd", "png-format"]

# Enables the use of the standard library. Deactivate this and activate the no-std-float
# feature to compile for targets that don't have std.
std = ["tiny-skia-path/std"]
no-std-float = ["tiny-skia-path/no-std-float"]

# Enables x86 SIMD instructions from SSE up to AVX2.
# Has no effect on non-x86 targets. Present mainly for testing.
simd = ["safe_arch"]

# Allows loading and saving `Pixmap` as PNG.
png-format = ["std", "png"]
