[package]
name = "tiny-skia-geom"
version = "0.6.6"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
edition = "2018"
description = "A collection of geometry primitives used by tiny-skia"
documentation = "https://docs.rs/tiny-skia-geom/"
readme = "README.md"
repository = "https://github.com/RazrFalcon/tiny-skia/geom"
license = "BSD-3-Clause"
keywords = ["graphics", "curve", "curves", "bezier", "geometry"]
categories = ["graphics"]
workspace = ".."

[dependencies]
arrayref = "0.3.6"
bytemuck = "1.4"
libm = { version = "0.2.1", optional = true } # float support on no_std

[features]
default = ["std"]

# Enables the use of the standard library. Deactivate this and activate the no-std-float
# feature to compile for targets that don't have std.
std = []
no-std-float = ["libm"]
